Fixes some small deprecations